feat: 增加搜索功能

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -6,3 +6,43 @@
 .page .page-title {
   display: none;
 }
+
+.search-box .DocSearch.DocSearch-Button {
+    cursor: text;
+    width: 10rem;
+    height: 2rem;
+    color: #5b5b5b;
+    border: 1px solid var(--border-color);
+    border-radius: 0.25rem;
+    font-size: 0.9rem;
+    padding: 0 0.5rem 0 0rem;
+    outline: none;
+    transition: all 0.2s ease;
+    background: transparent;
+    background-size: 1rem;
+}
+
+.search-box .DocSearch-Button-Container {
+    margin-left: 0.4rem;
+}
+
+.search-box .DocSearch-Button .DocSearch-Search-Icon {
+    width: 16px;
+    height: 16px;
+    position: relative;
+    top: 0.1rem;
+}
+
+.search-box .DocSearch-Button-Placeholder {
+    font-size: 0.8rem;
+}
+
+.search-box .DocSearch-Button-Keys {
+    position: absolute;
+    right: 0.1rem;
+}
+
+.search-box .DocSearch-Button-Key {
+    font-size: 12px;
+    line-height: 20px;
+}
